--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,10 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+
+.likes__container {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  align-items: center;
+}
