--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,10 @@
     line-height: 17px;
   }
 }
+
+.popup__button_disabled {
+  color: #C4C4C4;
+  border: 1px solid #c4c4c4;
+ background: #fff;
+  pointer-events: none;
+} 
