--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -20,3 +20,11 @@
     line-height: 15px;
   }
 }
+
+.popup__input-type_error {
+  border-bottom-color: #f00;
+}
+
+.popup__error_visible {
+ color: #f00;
+}
